test-argo-elc/elc-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: nginx
  namespace: testargomanu
  labels:
    app.kubernetes.io/name: proxy
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
      - containerPort: 80
        name: http-web-svc

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  namespace: testargomanu
  name: nginx-service
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: http-web-svc

---
ignoreDifferences:
  - group:
    kind: Pod
    jsonPointers:
      - /metadata/annotations
---
